Minor Updates Added